--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ matplotlib==3.7.5
 nltk==3.9.1
 numpy
 pandas==2.2.3
-Pillow==11.0.0
+Pillow
 plotly==5.24.1
 scikit_learn==1.4.2
 scikit_plot==0.3.7
