--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pandas==2.2.3
 plotly==5.24.1
 scikit_learn==1.4.2
 scikit_plot==0.3.7
-streamlit==1.39.0
+streamlit
 tensorflow==2.18.0
 torch==2.5.0
 transformers==4.45.2
