--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-joblib==1.3.2
-matplotlib==3.7.5
-nltk==3.9.1
+joblib
+matplotlib
+nltk
 numpy
-pandas==2.2.3
-plotly==5.24.1
-scikit_learn==1.4.2
-scikit_plot==0.3.7
+pandas
+plotly
+scikit_learn
+scikit_plot
 streamlit
-tensorflow==2.18.0
-torch==2.5.0
-transformers==4.45.2
-wordcloud==1.9.3
+tensorflow
+torch
+transformers
+wordcloud
