--- a/.github/workflows/main_streamlitappdepi.yml
+++ b/.github/workflows/main_streamlitappdepi.yml
@@ -68,6 +68,7 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_05F628EBA5BC46B5A38030F966A1AFF7 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_84EDFEBEFD634D828B8A4C155171732D }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_808ED64796204E7682322D2ED12568A7 }}
+          allow-no-subscriptions: true
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
