--- a/.github/workflows/main_depistreamlitapp.yml
+++ b/.github/workflows/main_depistreamlitapp.yml
@@ -76,6 +76,6 @@ jobs:
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: 'streamlitappdepi'
+          app-name: 'DepiSentimentAnalysis'
           package: 'release.zip'
           
